2.45 (unreleased)
-----------------

- Nothing changed yet.


2.44 (2018-06-04)
-----------------

- Fix up reporting of fragment number in event description when asking device for next fragment. Was off by 1 due to starting at fragment 0.


2.43 (2018-06-03)
-----------------

- Add more descriptive event when a photo is reported by the device


2.42 (2018-06-03)
-----------------

- Add event logging for outbound take_photo, get_file and get_file_list commands


2.41 (2018-06-03)
-----------------

- Fix in container builder for simchatcelery. Service was failing to start.


2.40 (2018-06-03)
-----------------

- Implement celery tasks to send commands from ui to devices.


2.39 (2018-05-28)
-----------------

- Implement get file, take photo and photo list for targeted clients.


2.38 (2018-05-28)
-----------------

- Fix bug causing images to fail on upload. Log time was getting set incorrectly.


2.37 (2018-05-28)
-----------------

- Handle camera time in image uploads. Get time from image filename.


2.36 (2018-05-28)
-----------------

- Bring in change from geotool api to avoid the memcache connection being shared between multiple processes


2.35 (2018-05-27)
-----------------

- Fix bug with client closing on connect.


2.34 (2018-05-27)
-----------------

- Parse all connections looking for timed messages to send.


2.33 (2018-05-26)
-----------------

- Fix image push for file parser


2.32 (2018-05-26)
-----------------

- No disconnect on initial read being empty


2.31 (2018-05-26)
-----------------

- Fix reference to variable that was deleted causing Exceptions.


2.30 (2018-05-26)
-----------------