@@ -46,6 +46,12 @@ class MeitrackChatClient(BaseChatClient):
     def send_command(self, command):
         pass
 
+    def send_gprs(self, gprs):
+        message = gprs.as_bytes(self.message_counter)
+        logger.info(message)
+        self.send_data(message)
+        self.message_counter += 1
+
     def get_client_details(self):
         start = super(MeitrackChatClient, self).get_client_details()
         return "meitrack, ident: %s, remote: %s, age: %s\n%s\nBuffer: %s\nCurrent download: %s\nSDCard List: %s\n" % (
@@ -94,22 +100,22 @@ class MeitrackChatClient(BaseChatClient):
             return
         if response.get("heartbeat_interval") is not None:
             gprs = build_message.stc_set_heartbeat_interval(self.imei, response.get("heartbeat_interval"))
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("time_interval") is not None:
             gprs = build_message.stc_set_tracking_by_time_interval(self.imei, response.get("time_interval"))
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("cornering_angle") is not None:
             gprs = build_message.stc_set_cornering_angle(self.imei, response.get("cornering_angle"))
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("tracking_by_distance") is not None:
             gprs = build_message.stc_set_tracking_by_distance(self.imei, response.get("tracking_by_distance"))
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("time_zone_offset_minutes") is not None:
             gprs = build_message.stc_set_time_zone(self.imei, response.get("time_zone_offset_minutes"))
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("driving_license_type") is not None:
             gprs = build_message.stc_set_driver_license_type(self.imei, response.get("driving_license_type"))
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("fatigue_driving_consecutive_driving_time") is not None or \
                 response.get("fatigue_driving_alert_time") is not None or \
                 response.get("fatigue_driving_acc_off_time_mins") is not None:
@@ -122,7 +128,7 @@ class MeitrackChatClient(BaseChatClient):
                 alert,
                 acc_off
             )
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("idle_alert_consecutive_speed_time") is not None or \
                 response.get("idle_alert_speed_kmh") is not None or \
                 response.get("idle_alert_alert_time") is not None:
@@ -136,7 +142,7 @@ class MeitrackChatClient(BaseChatClient):
                 speed,
                 alert_time,
             )
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("speeding_alert_speed") is not None or \
                 response.get("speeding_alert_disabled") is not None:
             speed = response.get("speeding_alert_speed") or 480
@@ -146,13 +152,13 @@ class MeitrackChatClient(BaseChatClient):
                 speed,
                 disabled,
             )
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
         if response.get("driving_license_validity_time") is not None:
             gprs = build_message.stc_set_driver_license_validity_time(
                 self.imei,
                 response.get("driving_license_validity_time")
             )
-            self.send_data(gprs.as_bytes())
+            self.send_gprs(gprs)
 
     def process_data(self, data):
         return_str = "%s " % self.ident()
@@ -279,7 +285,7 @@ class MeitrackChatClient(BaseChatClient):
         else:
             try:
                 gprs = build_message.stc_request_location_message(self.imei)
-                self.send_data((gprs.as_bytes()))
+                self.send_gprs(gprs)
             except GPRSError as err:
                 logger.error("Failed to create gprs payload to send. Error: %s", err)
 
@@ -289,9 +295,7 @@ class MeitrackChatClient(BaseChatClient):
         else:
             try:
                 gprs = build_message.stc_request_device_info(self.imei)
-                logger.log(13, gprs)
-                logger.log(13, gprs.as_bytes())
-                self.send_data((gprs.as_bytes()))
+                self.send_gprs(gprs)
             except GPRSError as err:
                 logger.error("Failed to create gprs payload to send. Error %s", err)
 
@@ -301,7 +305,7 @@ class MeitrackChatClient(BaseChatClient):
         else:
             try:
                 gprs = build_message.stc_request_photo_list(self.imei, start)
-                self.send_data((gprs.as_bytes()))
+                self.send_gprs(gprs)
                 self.last_file_request = datetime.datetime.now()
                 report = event_to_report(self.imei, "Request photo list")
                 queue_result = self.queue_report(report)
@@ -316,7 +320,7 @@ class MeitrackChatClient(BaseChatClient):
         else:
             try:
                 gprs = build_message.stc_request_take_photo(self.imei, camera_number, file_name)
-                self.send_data((gprs.as_bytes()))
+                self.send_gprs(gprs)
                 report = event_to_report(self.imei, "Request take photo camera {}".format(camera_number))
                 queue_result = self.queue_report(report)
                 logger.log(13, "Queue add result was %s", queue_result)
@@ -333,7 +337,7 @@ class MeitrackChatClient(BaseChatClient):
         else:
             try:
                 gprs = build_message.stc_request_get_file(self.imei, file_name, payload_start_index)
-                self.send_data((gprs.as_bytes()))
+                self.send_gprs(gprs)
                 self.last_file_request = datetime.datetime.now()
                 report = event_to_report(
                     self.imei,
